tests/runtime/invalid/imports.wai
roundtrip_u8: function(a: u8) -> u8
roundtrip_s8: function(a: s8) -> s8
roundtrip_u16: function(a: u16) -> u16
roundtrip_s16: function(a: s16) -> s16
roundtrip_char: function(a: char) -> char

enum e { a, b, c }
roundtrip_enum: function(a: e) -> e

roundtrip_bool: function(a: bool) -> bool

resource host_state
get_internal: function(a: host_state) -> u32
